--- a/src/pages/settings/settings.module.css
+++ b/src/pages/settings/settings.module.css
@@ -1,5 +1,5 @@
 .normalbutton {
-  @apply mt-3 flex h-10 w-96 items-center border-gray-700 bg-[#d8d5db];
+  @apply mt-3 flex h-10 w-64 md:w-96 items-center border-gray-700 bg-[#d8d5db];
 }
 
 .buttontext {
